--- a/Css/RStyleSheet.css
+++ b/Css/RStyleSheet.css
@@ -27,7 +27,7 @@ li{
     opacity: 0.9;
     box-shadow: 5px 5px 5px 5px rgba(128, 128, 128, 0.288);
     width: 100%;
-    height: 45px;
+    height: auto;
     background: #b92b27;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #1565C0, #b92b27);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #1565C0, #b92b27); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -381,7 +381,15 @@ animation-duration: 6s;
     
 }
 
+#loader{
+    background-attachment: fixed;
 
-
-
-
+    background:#fff url("../Images/Namaste.jfif") no-repeat center ;
+    width: 100%;
+    height: 100vh;
+}
+@media only screen and (max-width: 840px) {
+    .menu ul{
+      display: block;
+    }
+  }
